# AutoSmoothQuant

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
autosmoothquant/examples/: eval_model.py  export_int8_llama.py  generate_act_scales.py  ppl_eval.py  smoothquant_model.py  test_model.py
autosmoothquant/layers/functional/: bmm.py  fused.py  quantization.py
autosmoothquant/layers/nn/: __init__.py  fused.py  linear.py
autosmoothquant/models/: __init__.py  baichuan.py  llama.py  mixtral.py  opt.py  phi2.py  qwen2.py
autosmoothquant/quantize/: calibration.py  smooth.py
autosmoothquant/utils/: __init__.py  datautils.py  eval_utils.py  utils.py
benchmarks/: base.py  evaluator.py  utils.py
benchmarks/models/: quant_model.py
csrc/int8gemm/: CMakeLists.txt  bindings.cpp
layers/cpp/ft_gemm/: CMakeLists.txt  bindings.cpp  cublasAlgoMap.cc  cublasAlgoMap.h  cublasMMWrapper.cc  cublasMMWrapper.h  setup.py
layers/ft_gemm/: allocator.h  cublasFP8MMWrapper.cu  cublasINT8MMWrapper.h  cuda_utils.h  setup.py
layers/functional/: fused.py  quantization.py
layers/int8gemm/: bindings.cpp  common.h  cublasINT8MMWrapper.cc  cublasINT8MMWrapper.h  cuda_utils.cc  test.py
smoothquant/examples/: export_int8_llama.py  export_int8_model.py
smoothquant/layers/functional/: bmm.py
smoothquant/layers/nn/: linear.py
smoothquant/models/: llama.py  opt.py
